add website app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-fitness-app",
+  "name": "react-gym-fitness-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
